# scrapy-rotating-proxies

./: .gitignore  MANIFEST.in  bench.py  pyproject.toml  setup.cfg
rotating_proxies/: __init__.py  backoff.py  expire.py  middlewares.py  policy.py  utils.py
rotating_proxies/extensions/: httpcache.py
tests/: test_expire.py  test_mixin.py
