[bdist_wheel]
universal = 1

[metadata]
author = Mikhail Korobov
name = scrapy-rotating-proxies
version = attr: rotating_proxies.__version__
python_requires = >=3.6
description = Rotating proxies for Scrapy
long_description = file: README.rst, CHANGES.rst
url = https://github.com/TeamHG-Memex/scrapy-rotating-proxies
license = MIT license
classifiers =
    Development Status :: 3 - Alpha'
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Framework :: Scrapy
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[options]
zip_safe = False
include_package_data = True
packages =
  rotating_proxies
